// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut Audite 1`] = `
<div
  className="px-2 mt-4 w-full bg-primary-2"
>
  <div
    className="w-52"
  >
    <button
      aria-expanded={false}
      aria-label="ouvrir le menu"
      className="flex items-center w-full p-2 text-left text-sm w-full"
      data-test="action-audit-statut"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <div
        className="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5"
        data-test="Badge-undefined"
      >
        <span
          className="text-success-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
        >
          Audité
        </span>
      </div>
      <span
        className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut En Cours 1`] = `
<div
  className="px-2 mt-4 w-full bg-primary-2"
>
  <div
    className="w-52"
  >
    <button
      aria-expanded={false}
      aria-label="ouvrir le menu"
      className="flex items-center w-full p-2 text-left text-sm w-full"
      data-test="action-audit-statut"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <div
        className="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5"
        data-test="Badge-undefined"
      >
        <span
          className="text-info-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
        >
          Audit en cours
        </span>
      </div>
      <span
        className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut Non Audite 1`] = `
<div
  className="px-2 mt-4 w-full bg-primary-2"
>
  <div
    className="w-52"
  >
    <button
      aria-expanded={false}
      aria-label="ouvrir le menu"
      className="flex items-center w-full p-2 text-left text-sm w-full"
      data-test="action-audit-statut"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <div
        className="bg-warning-2 border-warning-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5"
        data-test="Badge-undefined"
      >
        <span
          className="text-warning-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
        >
          Non audité
        </span>
      </div>
      <span
        className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut Read Only 1`] = `
<div
  className="px-2 mt-4 w-full bg-primary-2"
>
  <div
    className="py-2"
    data-test="action-audit-statut-ro"
  >
    <div
      className="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5"
      data-test="Badge-undefined"
    >
      <span
        className="text-success-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
      >
        Audité
      </span>
    </div>
  </div>
</div>
`;
